"Styles: fixed button overlap problem"

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,43 +7,51 @@ body {
   align-items: center;
   min-height: 100vh;
   margin: 0;
+  padding: 0;
 }
 
-  .container {
-    width: 100%;
-    max-width: 1280px;
-    padding: 1rem;
-  }
-  .container form{
-    display: flex;
-    flex-direction: column;
-  }
-
-  .step {
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    margin-bottom: 20px;
-  }
-  h2 {
-    font-size: 14px;
-    color: #5e5e5e;
-    margin-bottom: 10px;
-  }
-  .step h2 span {
-    color: #ff9900; /* cor retirada da imagem de exemplo */
-  }
-  .step h1 {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
+.container {
+  width: 100%;
+  max-width: 1280px;
+  padding: 1rem;
+  margin: 0 auto;
 }
+
+.container form {
+  display: flex;
+  flex-direction: column;
+}
+
+.step {
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+h2 {
+  font-size: 14px;
+  color: #5e5e5e;
+  margin-bottom: 10px;
+}
+
+.step h2 span {
+  color: #ff9900; /* cor retirada da imagem de exemplo */
+}
+
+.step h1 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
 .step label {
   display: block;
   margin-bottom: 5px;
   color: #333;
 }
-.step input{
+
+.step input {
   width: 100%;
   border: 1px solid #ccc;
   border-radius: 2px;
@@ -55,9 +63,11 @@ body {
   display: flex;
   margin-bottom: 15px;
 }
+
 .radio-group label {
   display: flex;
 }
+
 .step button {
   width: 100%;
   padding: 10px;
@@ -67,15 +77,55 @@ body {
   background-color: #ff9900; /* cor retirada da imagem de exemplo */
   cursor: pointer;
 }
+
 .step .button-group {
   display: flex;
   justify-content: space-between;
 }
+
 .step .button-group button {
   width: 48%;
 }
+
 .step .button-group button.back {
   background-color: white;
   color: #ff9900; /* cor retirada da imagem de exemplo */
   border: 1px solid #ff9900;
+}
+
+/* Ajustes para dispositivos móveis */
+@media (max-width: 390px) {
+  h1 {
+    font-size: 20px;
+  }
+
+  h2 {
+    font-size: 12px;
+  }
+
+  .step {
+    padding: 15px;
+  }
+
+  .step button {
+    padding: 8px;
+  }
+
+  .step .radio-group {
+    width: 100%;
+  }
+
+  .step .button-group {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .step .button-group button {
+    width: 100%;
+    margin: 0;
+  }
+
+  .step .button-group button.back {
+    margin-bottom: 0;
+  }
 }
